--- a/2.normalization/1.a-gentle-introduction-to-regex.ipynb
+++ b/2.normalization/1.a-gentle-introduction-to-regex.ipynb
@@ -11,8 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Définition\n",
-    "\n",
+    "## Définition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Le terme d’expression rationnelle caractérise un motif qui spécifie les conditions à remplir pour toute recherche effectuée par un opérateur (logiciel de traitement de texte, moteur de recherche, instruction dans un langage informatique…).\n",
     "\n",
     "Si le terme d’expression régulière se rencontre souvent de manière concurrentielle, elle n’est pas à privilégier car directement calquée sur l’anglais *regular expressions* (*regex* en abrégé). Une autre traduction se rencontre parfois, celle d’expression normale.\n",
@@ -26,8 +31,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Une mise en œuvre immédiate\n",
-    "\n",
+    "## Une mise en œuvre immédiate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Le site [Rubular](https://rubular.com/) est un service Web qui permet de tester rapidement la validité d’une expression rationnelle. N’hésitez pas à vous reposer sur ce [mémo](./files/memo-regex.pdf) pour formaliser vos motifs."
    ]
   },
@@ -35,8 +45,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comment trouver les occurrences d’un mot, au singulier et au pluriel ?\n",
-    "\n",
+    "### Comment trouver les occurrences d’un mot, au singulier et au pluriel ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Dans le texte suivant, cherchez les occurrences du mot *pied* :\n",
     "\n",
     "```\n",
@@ -56,8 +71,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comment repérer une lettre en minuscule et en capitale ?\n",
-    "\n",
+    "### Comment repérer une lettre en minuscule et en capitale ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Dans le texte suivant, essayez de repérer toutes les apparitions de la lettre *e* :\n",
     "\n",
     "```\n",
@@ -78,8 +98,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comment identifier un mot ?\n",
-    "\n",
+    "### Comment identifier un mot ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "La notion de mot est moins évidente qu’il n’y paraît. Essayez de les identifier automatiquement dans le même texte.\n",
     "\n",
     "**Regex :**\n",
@@ -94,8 +119,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comment identifier un mot commençant par certains caractères ?\n",
-    "\n",
+    "### Comment identifier un mot commençant par certains caractères ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Cette fois-ci, repérez les mots commençant par *ex*.\n",
     "\n",
     "**Regex :**\n",
@@ -114,8 +144,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comment identifier des sigles ?\n",
-    "\n",
+    "### Comment identifier des sigles ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Essayez, toujours dans le même texte, de repérer les sigles.\n",
     "\n",
     "**Regex :** `[A-Z]{2,}`\n",
@@ -129,8 +164,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comment identifier des années ?\n",
-    "\n",
+    "### Comment identifier des années ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Regex :** `\\d{4}`\n",
     "\n",
     "**Analyse :** `\\d` correspond à un caractère de type numérique. Il fonctionne de la même manière\n",
@@ -141,7 +181,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -155,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
