--- a/2.normalization/2.re-module.ipynb
+++ b/2.normalization/2.re-module.ipynb
@@ -11,8 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Premiers pas\n",
-    "\n",
+    "## Premiers pas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Le module *re* fait partie de la distribution de Python et peut s’importer sans installation préalable :"
    ]
   },
@@ -39,7 +44,7 @@
    "outputs": [],
    "source": [
     "s = 'Un truc de dingue.'\n",
-    "pattern = '[A-Z]'\n",
+    "pattern = r'[A-Z]'\n",
     "result = re.match(pattern, s)"
    ]
   },
@@ -90,15 +95,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pattern = r'\\n'"
+    "pattern = r'\\w+'\n",
+    "prog = re.compile(pattern)\n",
+    "result = prog.match(s)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Les métacaractères\n",
-    "\n",
+    "## Les métacaractères"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "La syntaxe des expressions rationnelles réserve l’utilisation de certains caractères à des emplois spécifiques. Par exemple, dans l’expression `[0-9]`, les signes *[* et *]* permettent de définir une classe de caractères mais ne se représentent pas eux-mêmes. On parle alors de métacaractères. Pour rechercher un crochet ouvrant dans une chaîne de caractères, il conviendrait alors de déspécialiser le métacaractère avec un *backslash* : `\\[`\n",
     "\n",
     "Les métacaractères du module *re* sont : `. ^ $ * + ? { } [ ] \\ | ( )`\n",
@@ -120,22 +132,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Recherche de correspondances\n",
-    "\n",
-    "Le module *re* propose plusieurs méthodes qui permettent d’effectuer une recherche de motif :\n",
-    "- `search()` : analyse la chaîne à la recherche d’une correspondance\n",
-    "- `match()` : détermine, à partir du début de la chaîne, si la *regex* trouve une correspondance\n",
-    "- `findall()` : renvoie sous forme de liste les correspondances de la *regex*\n",
-    "- `finditer()` : recherche les correspondances et les renvoie sous forme d’itérateur"
+    "## Recherche de correspondances"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Vérifier l’existence d’un motif\n",
-    "\n",
-    "La méthode `search()` est la plus intuitive : elle permet de rechercher, n’importe où dans la chaîne, une concordance :"
+    "Le module *re* propose plusieurs méthodes qui permettent d’effectuer une recherche de motif :\n",
+    "- `.search()` : analyse la chaîne à la recherche d’une correspondance\n",
+    "- `.match()` : détermine, à partir du début de la chaîne, si la *regex* trouve une correspondance\n",
+    "- `.findall()` : renvoie sous forme de liste les correspondances de la *regex*\n",
+    "- `.finditer()` : recherche les correspondances et les renvoie sous forme d’itérateur"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vérifier l’existence d’un motif"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La méthode `.search()` est la plus intuitive : elle permet de rechercher, n’importe où dans la chaîne, une concordance :"
    ]
   },
   {
@@ -145,14 +167,14 @@
    "outputs": [],
    "source": [
     "text = \"La première guerre mondiale a commencé en 1914 et s’est terminée en 1918.\"\n",
-    "result = re.search(\"\\d{4}\", text)"
+    "result = re.search(r\"\\d{4}\", text)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le résultat est ensuite exploitable à travers une méthode `group()` :"
+    "Le résultat est ensuite exploitable à travers une méthode `.group()` :"
    ]
   },
   {
@@ -168,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La méthode `match()` va quant à elle essayer de repérer une correspondance à partir du début de la chaîne :"
+    "La méthode `.match()` va quant à elle essayer de repérer une correspondance à partir du début de la chaîne :"
    ]
   },
   {
@@ -177,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = re.match(\"\\d{4}\", text)"
+    "result = re.match(r\"\\d{4}\", text)"
    ]
   },
   {
@@ -210,7 +232,7 @@
    "outputs": [],
    "source": [
     "# does the string starts with a date?\n",
-    "result = re.match(\"^\\d{4}\", text)\n",
+    "result = re.match(r\"^\\d{4}\", text)\n",
     "# if so…\n",
     "if result:\n",
     "    print('There is a match:', result.group())\n",
@@ -223,18 +245,23 @@
    "metadata": {},
    "source": [
     "À noter trois autres méthodes pour exploiter le résultat :\n",
-    "- `span()` : indique la position où la *regex* se vérifie\n",
-    "- `start()` : indique la position de début de vérification de la *regex*\n",
-    "- `end()` : indique la position de fin de vérification de la *regex*"
+    "- `.span()` : indique la position où la *regex* se vérifie\n",
+    "- `.start()` : indique la position de début de vérification de la *regex*\n",
+    "- `.end()` : indique la position de fin de vérification de la *regex*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Trouver toutes les occurrences d’un motif\n",
-    "\n",
-    "Les méthodes `findall()` et `finditer()` sont plus pratiques pour isoler les résultats d’une recherche. Dans le cas de la première, le programme renvoie une liste ; dans le cas de la seconde, un itérateur :"
+    "### Trouver toutes les occurrences d’un motif"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les méthodes `.findall()` et `.finditer()` sont plus pratiques pour isoler les résultats d’une recherche. Dans le cas de la première, le programme renvoie une liste ; dans le cas de la seconde, un itérateur :"
    ]
   },
   {
@@ -243,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = re.findall(\"\\d{4}\", text)\n",
+    "results = re.findall(r\"\\d{4}\", text)\n",
     "print(results)"
    ]
   },
@@ -253,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = re.finditer(\"\\d{4}\", text)\n",
+    "results = re.finditer(r\"\\d{4}\", text)\n",
     "for r in results:\n",
     "    print(r.group())"
    ]
@@ -262,9 +289,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Opérations pour modifier une chaîne\n",
-    "\n",
-    "La méthode la plus souvent utilisée pour effectuer ces opérations est `sub()`. Elle accepte trois paramètres : le motif, le remplacement et l’objet où l’effectuer."
+    "## Opérations pour modifier une chaîne"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La méthode la plus souvent utilisée pour effectuer ces opérations est `.sub()`. Elle accepte trois paramètres : le motif, le remplacement et l’objet où l’effectuer."
    ]
   },
   {
@@ -273,7 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = re.sub(\"\\d{4}\", \"AAAA\", text)\n",
+    "result = re.sub(r\"\\d{4}\", \"AAAA\", text)\n",
     "print(result)"
    ]
   },
@@ -281,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On pourrait aussi citer la méthode `split()` qui découpe une chaîne de caractères en liste d’éléments :"
+    "On pourrait aussi citer la méthode `.split()` qui découpe une chaîne de caractères en liste d’éléments :"
    ]
   },
   {
@@ -290,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = re.split(\"\\W\", text)\n",
+    "results = re.split(r\"\\W\", text)\n",
     "print(results)"
    ]
   },
@@ -327,7 +359,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La méthode `compile()` accepte en second paramètre des options de compilation parmi lesquelles :\n",
+    "La méthode `.compile()` accepte en second paramètre des options de compilation parmi lesquelles :\n",
     "\n",
     "|Option|Description|Notation abrégée|\n",
     "|:-:|:-|:-:|\n",
@@ -352,7 +384,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -366,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
