--- a/2.normalization/3.capturing.ipynb
+++ b/2.normalization/3.capturing.ipynb
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Remarque :** en l’occurrence, le résultat aurait été plus simple à obtenir avec la méthode `findall()` :"
+    "**Remarque :** en l’occurrence, le résultat aurait été plus simple à obtenir avec la méthode `.findall()` :"
    ]
   },
   {
@@ -107,9 +107,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Les renvois\n",
-    "\n",
-    "Comme ils sont numérotés, il est possible, dans une même *regex*, de faire référence à un groupe de capture grâce à la notation `\\x` où `x` est le numéro du groupe. Cette facilité est notamment très utile dans le cadre de substitutions :"
+    "### Les renvois"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comme ils sont numérotés, il est possible, dans une même *regex*, de faire référence à un groupe de capture grâce à la notation `\\x` où `x` est le numéro du groupe. Cette facilité est notamment très utile dans le cadre de substitutions :"
    ]
   },
   {
@@ -157,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Une méthode `groupdict()` permet de récupérer le résultat obtenu sous forme de dictionnaire :"
+    "Une méthode `.groupdict()` permet de récupérer le résultat obtenu sous forme de dictionnaire :"
    ]
   },
   {
@@ -186,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
