--- a/2.normalization/answers/2.2.a-space-oddity.ipynb
+++ b/2.normalization/answers/2.2.a-space-oddity.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# *A space oddity*\n",
-    "\n",
+    "# *A space oddity*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Dans le texte suivant, vous remarquez un manque d’uniformisation dans l’affichage des locuteurs et de leurs énoncés :"
    ]
   },
@@ -37,13 +42,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "import re\n",
+    "\n",
+    "text = re.sub(r'\\s?\\n?:\\n?\\s?', r'\\t', text)\n",
+    "print(text)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -57,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
