--- a/2.normalization/exercises/2.1.flexique.ipynb
+++ b/2.normalization/exercises/2.1.flexique.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Un lexique du français\n",
-    "\n",
+    "# Un lexique du français"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "La ressource *Flexique* est une base de données conçue pour étudier le système flexionnel du français. Elle est constituée de trois tables, réparties dans trois fichiers. Le fichier *nlexique.csv* recense 31 002 lexèmes pour 65 111 mots.\n",
     "\n",
     "Le code ci-dessous permet de charger tous les lexèmes et leurs représentations phonologiques dans une variable `lexemes` :"
@@ -19,7 +24,7 @@
    "source": [
     "import csv\n",
     "\n",
-    "with open('../files/nlexique.csv') as csvfile:\n",
+    "with open('../data/nlexique.csv') as csvfile:\n",
     "    reader = csv.DictReader(csvfile)\n",
     "    lexemes = [\n",
     "        (row['lexeme'], row['sg'])\n",
@@ -146,7 +151,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -160,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
